[gd_scene load_steps=4 format=3 uid="uid://dd0603anu2r1d"]

[ext_resource type="Theme" uid="uid://bt1cntv0keyr5" path="res://Theme.tres" id="1_sblpm"]
[ext_resource type="Script" uid="uid://dq5yxofal01ah" path="res://Script/Main.gd" id="2_r34rm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sblpm"]
bg_color = Color(0, 0, 0, 0.815686)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sblpm")
script = ExtResource("2_r34rm")

[node name="bg" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sblpm")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 214.0
offset_top = 95.0
offset_right = 619.0
offset_bottom = 299.0
scale = Vector2(1.72, 1.72)

[node name="Color" type="ColorPickerButton" parent="Panel"]
layout_mode = 0
offset_left = 304.0
offset_top = 13.0
offset_right = 395.0
offset_bottom = 188.0

[node name="Name" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 13.0
offset_right = 184.0
offset_bottom = 47.0
theme_override_font_sizes/font_size = 18
placeholder_text = "Name..."
caret_blink = true

[node name="Content" type="TextEdit" parent="Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 53.0
offset_right = 293.0
offset_bottom = 187.0
theme_override_font_sizes/font_size = 18
placeholder_text = "Text..."
caret_blink = true

[node name="Number" type="SpinBox" parent="Panel"]
layout_mode = 0
offset_left = 202.0
offset_top = 13.0
offset_right = 293.0
offset_bottom = 47.0
max_value = 1000.0

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 149.0
offset_right = -512.0
offset_bottom = 187.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.8, 1.8)
columns = 2

[node name="Save" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Save"

[node name="Save_dialog" type="FileDialog" parent="GridContainer/Save"]
initial_position = 2
access = 2
filters = PackedStringArray("*.json")
use_native_dialog = true

[node name="Load" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Load"

[node name="Load_dialog" type="FileDialog" parent="GridContainer/Load"]
title = "Open a File"
initial_position = 2
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.json")
use_native_dialog = true

[node name="Message" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 31

[node name="Message_Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="pressed" from="GridContainer/Save" to="." method="_on_save_pressed"]
[connection signal="file_selected" from="GridContainer/Save/Save_dialog" to="." method="_on_save_dialog_file_selected"]
[connection signal="pressed" from="GridContainer/Load" to="." method="_on_load_pressed"]
[connection signal="file_selected" from="GridContainer/Load/Load_dialog" to="." method="_on_load_dialog_file_selected"]
[connection signal="timeout" from="Message_Timer" to="." method="_on_message_timer_timeout"]
